try fix loginbox height on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,7 +72,7 @@ html, body {
 
 .login-box {
   width: 400px;
-  height: 340px;
+  height: 400px;
   margin: auto;
   background-color: #666666;
   text-align: center;
